Correcao W3C do Bug Overflow

--- a/_css/specs.css
+++ b/_css/specs.css
@@ -10,7 +10,6 @@
                         width: 400px;
                         height: 280px;
                         border: none;
-                        overflow: hidden;
                     }
                     
                     #frameSpec::-webkit-scrollbar {
